docs: add README for front